# xthi

./: .gitignore  CMakeLists.txt  Makefile  Makefile.rocm  README.md  xthi.c
